crates/oxc_react_compiler/tests/snapshots/infer-function-React-memo.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/infer-function-React-memo.js
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:"infer"
React.memo((props) => {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
});
