crates/oxc_react_compiler/tests/snapshots/infer-function-assignment.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/infer-function-assignment.js
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:"infer"
const Component = (props) => {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
};
