crates/oxc_react_compiler/tests/snapshots/infer-functions-component-with-ref-arg.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/infer-functions-component-with-ref-arg.js
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:"infer"
function Foo(t0, ref) {
	const $ = _c(2);
	let t1;
	if ($[0] !== ref) {
		t1 = <div ref={ref} />;
		$[0] = ref;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Foo,
	params: [{}]
};
