crates/oxc_react_compiler/tests/snapshots/infer-functions-hook-with-hook-call.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/infer-functions-hook-with-hook-call.js
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:"infer"
function useStateValue(props) {
	const $ = _c(2);
	const [state] = useState(null);
	let t0;
	if ($[0] !== state) {
		t0 = [state];
		$[0] = state;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
