crates/oxc_react_compiler/tests/snapshots/infer-functions-in-parameter-defaults.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/infer-functions-in-parameter-defaults.tsx
---
import { c as _c } from "react/compiler-runtime";
// @compilationMode:"infer"
import { memo } from "react";
function createWrapper(Wrapper = memo((t0) => {
	const $ = _c(2);
	const { value } = t0;
	let t1;
	if ($[0] !== value) {
		t1 = <div>{value}</div>;
		$[0] = value;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
})) {
	return Wrapper;
}
function createDestructuredWrapper({ Wrapper = memo((t0) => {
	const $ = _c(2);
	const { value } = t0;
	let t1;
	if ($[0] !== value) {
		t1 = <span>{value}</span>;
		$[0] = value;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}) } = {}) {
	return Wrapper;
}
const factory = { create(Wrapper = memo((t0) => {
	const $ = _c(2);
	const { value } = t0;
	let t1;
	if ($[0] !== value) {
		t1 = <p>{value}</p>;
		$[0] = value;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
})) {
	return Wrapper;
} };
export { createWrapper, createDestructuredWrapper, factory };
